<resources>
    <string name="title_login">Вход</string>
    <string name="et_label_email">Email</string>
    <string name="et_hint_email">example@gmail.com</string>
    <string name="et_label_password">Пароль</string>
    <string name="et_hint_password">Введите пароль</string>
    <string name="btn_text_login">Вход</string>
    <string name="tv_no_account">Нет аккаунта?</string>
    <string name="btn_text_register">Регистрация</string>

    <string name="btn_login_ok_desc">Войти через Одноклассники</string>
    <string name="btn_text_forgot_password">Забыл Пароль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_email_error">Неправильно введен Email!</string>
    <string name="input_password_error">Поле не должно быть пустым!</string>
</resources>