<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:maxWidth="420dp"
        android:padding="16dp"
        tools:context=".OnboardingActivity">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.Thousandcourses.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:labelFor="@id/et_email"
                    style="@style/TextAppearance.Thousandcourses.Title.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/et_label_email" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/Widget.Thousandcourses.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_email"
                    android:inputType="textEmailAddress" />

                <TextView
                    style="@style/TextAppearance.Thousandcourses.Title.Medium"
                    android:labelFor="@id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/et_label_password" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/Widget.Thousandcourses.TextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_password"
                    android:inputType="textPassword" />

            </LinearLayout>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.Thousandcourses.ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_text_login"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_no_account"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.Thousandcourses.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_register"
            app:layout_constraintBottom_toBottomOf="@+id/tv_no_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_no_account"
            app:layout_constraintTop_toTopOf="@+id/tv_no_account" />

        <Button
            android:id="@+id/btn_forgot_pw"
            style="@style/Widget.Thousandcourses.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pw"
            tools:layout_editor_absoluteX="16dp" />

        <ImageButton
            android:id="@+id/btn_login_vk"
            style="@style/Widget.Thousandcourses.Button.VK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/btn_login_vk_desc"
            app:layout_constraintEnd_toStartOf="@+id/btn_login_ok"
            app:layout_constraintHeight="40dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />


        <ImageButton
            android:id="@+id/btn_login_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.Thousandcourses.Button.OK"
            android:contentDescription="@string/btn_login_ok_desc"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login_vk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="40dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btn_login_vk"
            app:layout_constraintTop_toTopOf="@+id/btn_login_vk"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>